@@ -99,7 +99,7 @@ char b_glob[MAX_EXEC_STR + 1];
 uint64_t glob_ui64_stor[MAX_GLOB_STOR_AR_COUNT];
 int64_t glob_si64_stor[MAX_GLOB_STOR_AR_COUNT];
 float glob_float_stor[MAX_GLOB_STOR_AR_COUNT];
-int32_t glob_curtime;
+int64_t glob_curtime;
 
 char *GLOBAL_PREEXEC;
 char *GLOBAL_POSTEXEC;
