@@ -51,6 +51,7 @@
  *   - % Negate filter parameters with !, old parameters (e.g. iregex) removed, (please read NEWS for more info) (rev. 12_b2) 
  *   - ~ Accumulators affecting match results in certain cases (rev. 12_b3)
  *   - ~ generic matching routine segfault (rev. 12_b4)
+ *   - ~ Buffer overrun when referencing 'curtime' field (rev. 12_b5)
  *
  * v2.3:
  *
